--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -3,12 +3,15 @@
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 .container {
   display: grid;
-  grid-template-rows: 80vh; }
+  grid-template-rows: 30vh;
+}
