Building a User Interface

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,5 +2,6 @@
 // COLORS
 
 $primaryColor: #70d44b;
-$secondaryColor: #70d44b;
-$thirdColor: #70d44b;
+$secondaryColor: #00adbb;
+$thirdColor: #0083ad;
+$fourthColor: #00515e;
