--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,12 @@
 
 // BASE
 @import "./base/base";
+
+// Components
+@import "./components/navcenter";
+
+// Layout
+@import "./layout/header";
+
+//
+@import "./pages/homepage";
